Changes made in portfolio html file

--- a/index.html
+++ b/index.html
@@ -20,10 +20,10 @@ Danke für Ihren Besuch!
     </div>
 
     <div class="social-box">
-  	<a href="https://www.linkedin.com/in/giridharen-g-2b8ab828a/"><img src="linkedin.png" alt="LinkedIn" class="social-icon" /></a>
-  	<a href="https://github.com/dg-giridharen"><img src="github.png" alt="GitHub" class="social-icon" /></a>
-  	<a href="https://www.facebook.com/giridharen.dg"><img src="facebook.png" alt="Facebook" class="social-icon" /></a>
-  	<a href="https://www.instagram.com/dg_giridharen/"><img src="instagram.png" alt="Instagram" class="social-icon" /></a>
+  	<a href="https://www.linkedin.com"><img src="images/linkedin.png" alt="LinkedIn" class="social-icon" /></a>
+  	<a href="https://github.com"><img src="images/github.png" alt="GitHub" class="social-icon" /></a>
+  	<a href="https://www.facebook.com"><img src="images/facebook.png" alt="Facebook" class="social-icon" /></a>
+  	<a href="https://www.instagram.com"><img src="images/instagram.png" alt="Instagram" class="social-icon" /></a>
     </div>
 
   </div>
