Chances made in html file for portfolio page

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Portfolio | Giridharen G</title>
+  <link rel="icon" type="image/png" href="images/pageicon.png">
   <link rel="stylesheet" href="index.css" />
   <link href="https://fonts.googleapis.com/css2?family=Pacifico&family=Open+Sans&display=swap" rel="stylesheet" />
 </head>
@@ -13,8 +14,7 @@
       <h1>Giridharen G</h1>
       <h2>ML & Quantum Tech Enthusiast | Flutter App Developer</h2>
       <p>
-        Hands-on experience with Kyber-based cryptography, RL for autonomous vehicles, </br>and building cross-platform apps with Flutter.
-To know more about my projects and skills, feel free to check out my <a href="resume.html">resume</a>. 
+        I’m a motivated student with a passion for coding and technology innovation. Skilled in multiple <br> programming languages, I’m continuously striving to broaden my expertise and tackle new challenges. Feel free to explore my <a href="resume.html" class="resume-link">Resume</a> to see my projects and experience. <br> <br>
 Danke für Ihren Besuch!
       </p>
     </div>
@@ -29,7 +29,13 @@ Danke für Ihren Besuch!
   </div>
 
   <footer>
-    <p>© 2025 by Giridharen G | <a href="mailto:dg.giridharen@gmail.com">dg.giridharen@gmail.com</a></p>
+    <p>
+      © 2025 by Giridharen G |
+      <img src="images/mail.png" alt="Email" style="width:16px; height:16px; vertical-align:middle;" />
+      <a href="mailto:dg.giridharen@gmail.com">  dg.giridharen@gmail.com</a> |
+      <img src="images/phone.png" alt="Phone" style="width:16px; height:16px; vertical-align:middle;" />
+       0987654321
+    </p>
   </footer>
 </body>
 </html>
